--- a/src/components/messageComponent/MessageComponent.css
+++ b/src/components/messageComponent/MessageComponent.css
@@ -47,11 +47,11 @@ button:hover {
 }
 
 .taskInput {
-    width: 100%;
-    height: 40px;
-    padding: 0 12px;
-    border-radius: 20px;
-    font-size: 16px;
+    width: 100% !important;
+    height: 40px !important;
+    padding: 0 12px !important;
+    border-radius: 20px !important;
+    font-size: 16px !important;
 }
 
 .i.icon{
