--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,8 @@
     background-size: cover;
     background-repeat: repeat;
     background-position: center center;
-    height: 100%;
-    width: 100%;
+    height: 625px;
+    width: 1100px;
     /*left: 5%;*/
     /*top: 10%;*/
     border-radius: 20px;
