--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,13 @@
     position: absolute;
 }
 
+@media screen and (max-width: 920px) and (max-height: 420px){
+    .mainAppDisplay{
+        height: 410px;
+        width: 915px;
+    }
+}
+
 @media (max-width: 600px) {
     .mainAppDisplay {
         height: 80%;
