--- a/src/components/animation/AnimationSVG.css
+++ b/src/components/animation/AnimationSVG.css
@@ -39,3 +39,9 @@
         width: 235px;
     }
 }
+
+@media screen and (max-width: 920px) and (max-height: 420px){
+    .svgAnimation {
+        top: -15%;
+    }
+}
