--- a/src/components/messageComponent/MessageComponent.css
+++ b/src/components/messageComponent/MessageComponent.css
@@ -76,3 +76,12 @@ button:hover {
     grid-auto-flow: column;
     grid-column-gap: 10px;
  }
+
+
+@media screen and (max-width: 920px) and (max-height: 420px){
+    .actionRow label {
+         width: 65% !important;
+         min-width: 65% !important;
+     }
+}
+
