--- a/src/components/animation/AnimationSVG.css
+++ b/src/components/animation/AnimationSVG.css
@@ -6,11 +6,11 @@
 .show {
     display: block;
 }
-.svg-animation-container{
+
+.svg-animation-container {
     position: relative;
     left: 105px;
 }
-
 
 
 @media (max-width: 440px) {
@@ -40,8 +40,11 @@
     }
 }
 
-@media screen and (max-width: 920px) and (max-height: 420px){
+@media screen and (max-width: 920px) and (max-height: 420px) {
     .svgAnimation {
         top: -15%;
+        position: relative;
+        height: 225px;
+
     }
 }
