--- a/src/components/ListComponet/ListComponent.css
+++ b/src/components/ListComponet/ListComponent.css
@@ -1,6 +1,6 @@
 .listContainer{
     position: absolute;
-    height: 130px;
+    height: 165px;
     bottom: 20%;
     width: 100%;
     z-index: 3;
@@ -8,11 +8,17 @@
     overflow: scroll;
 }
 
+@media (max-width: 600px) {
+    .listContainer{
+        bottom: 25%;
+    }
+}
+
 .item.listItem{
     border-radius: 20px;
     color:white;
     min-width: 400px;
-    width: fit-content;
+    width: 59vw;
     background: black;
     padding-top:10px;
     text-align: center;
